Got to work on test cards (not fully working)

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -301,7 +301,7 @@ button:active{
 
 #highlights:before, #highlights:after{
     position: absolute;
-    background: url("assets/wave.svg");
+    background: url("../assets/wave.svg");
     content: "";
     width: 101vw;
     height: 12vw;
